[gd_scene load_steps=8 format=3 uid="uid://c8ku18ygnjb11"]

[ext_resource type="Script" path="res://scene/main_menu/MapCard.gd" id="1_7iph0"]
[ext_resource type="FontFile" uid="uid://bplyekufap58x" path="res://visual/font/Alibaba-PuHuiTi-Light.ttf" id="1_t2f04"]
[ext_resource type="FontFile" uid="uid://dg0mqbbbvqinh" path="res://visual/font/Alibaba-PuHuiTi-Bold.ttf" id="2_ka65d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2iw3a"]
bg_color = Color(0, 0, 0, 0.4)
border_width_right = 5
border_color = Color(0.360784, 0.298039, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wy81l"]
line_spacing = 0.0
font = ExtResource("1_t2f04")
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_eysa6"]
line_spacing = 0.0
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_k6r7m"]
line_spacing = 0.0
font = ExtResource("2_ka65d")
font_size = 47
shadow_size = 4
shadow_color = Color(0.854902, 0.478431, 0.364706, 0.729412)
shadow_offset = Vector2(-3, 1)

[node name="MapCard" type="Panel"]
custom_minimum_size = Vector2(300, 70)
theme_override_styles/panel = SubResource("StyleBoxFlat_2iw3a")
script = ExtResource("1_7iph0")

[node name="LabelDiff" type="Label" parent="."]
layout_mode = 1
offset_left = 14.0
offset_top = 4.0
offset_right = 35.0
offset_bottom = 37.0
text = "-"
label_settings = SubResource("LabelSettings_wy81l")

[node name="LabelInfo" type="Label" parent="."]
layout_mode = 1
offset_left = 14.0
offset_top = 37.0
offset_right = 182.0
offset_bottom = 67.0
text = "- NULL -"
label_settings = SubResource("LabelSettings_eysa6")

[node name="LabelRating" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -33.0
offset_right = -17.0
offset_bottom = 33.0
grow_horizontal = 0
grow_vertical = 2
text = "-"
label_settings = SubResource("LabelSettings_k6r7m")
horizontal_alignment = 2
